update ui of popup

--- a/chart_ext/popup.html
+++ b/chart_ext/popup.html
@@ -10,17 +10,15 @@
 <body>
   <div class="page">
     <div class="top_view">
-      <div id="title" class="item">EURUSD</div>
+      <div  class="center">
+        <button id="title"  class="button">EURUSD</button>
+      </div>
+      <div id="prev" class="left">&leftarrow;PREV</div>
+      <div id="next" class="right">NEXT&rightarrow;</div>  
     </div>
+    <hr/>
 	  <div id="chart"></div>
     <div id="sub_chart"></div>
-    <div class="button_view">
-      <div id="prev" class="item">PREV</div>
-      <div id="next" class="item">NEXT</div>  
-      <div class="item">
-        <div id="more" class="right">>></div>
-      </div>
-    </div>
   </div>
   <script src="lightweight-charts-v4.js"></script>
   <script src="popup.js"></script>
