feat:upload pic to server

--- a/chart_ext/popup.html
+++ b/chart_ext/popup.html
@@ -11,7 +11,7 @@
   <div class="page">
     <div class="top_view">
       <div  class="center">
-        <button id="title"  class="button">EURUSD</button>
+        <button id="title"  class="button">EURUSD</button><label id="pick" class="pick">&copy;</label>  
       </div>
       <div id="prev" class="left">&leftarrow;PREV</div>
       <div id="next" class="right">NEXT&rightarrow;</div>  
